structmeta-tests/tests/compile_fail/struct_meta/expected_name_args_or_flag_buf_name_value.rs
#[structmeta_tests::attr_name_args_or_flag(value = 10)]
fn my_func() {}

fn main() {}
