structmeta-tests/tests/compile_fail/struct_meta/expected_name_args_or_flag_buf_name_value.stderr
error[E0433]: failed to resolve: could not find `attr_name_args_or_flag` in `structmeta_tests`
 --> $DIR/expected_name_args_or_flag_buf_name_value.rs:1:21
  |
1 | #[structmeta_tests::attr_name_args_or_flag(value = 10)]
  |                     ^^^^^^^^^^^^^^^^^^^^^^ could not find `attr_name_args_or_flag` in `structmeta_tests`
